# functracer

./: .gitignore  INSTALL  Makefile  Makefile.am  README  backtrace.c  breakpoint.c  breakpoint.h  breakpoint_callbacks.c  callback.c  changelog  configure.ac  debug.c  debug.h  display.c  elf.c  elf.h  event.c  event.h  functracer.1  functracker.c  options.c  options.h  plt.c  process.c  process.h  ptrace.c  ptrace.h  report.c  report.h  solib.c  syscall.c  target_mem.c  trace.c  trace_callbacks.c  util.c
debian/: README.Debian  changelog  control  copyright  docs  functracer.install  rules
devscripts/: README  generic.cfg  module-template  posix-shm.cfg  test-module.c  test-module.cfg
doc/: Makefile  functracer_architecture.eps  functracer_internals.conf  functracer_internals.txt
include/: arch-defs-arm.h  arch-defs-i386.h  arch-defs.h  backtrace.h  breakpoint.h  callback.h  context.h  debug.h  dict.h  event.h  filter.h  function.h  library.h  maps.h  options.h  plugins.h  process.h  ptrace.h  report.h  solib.h  ssol.h  syscall.h  sysdeps.h  target_mem.h  trace.h  util.h
man/: functracer.1.inc
src/: Makefile.am  backtrace.c  backtrace_gdb.c  breakpoint-arm.c  breakpoint-i386.c  breakpoint.c  callback.c  context.c  debug.c  dict.c  filter.c  filter.h  function-arm.c  function-i386.c  functracer.c  functracker.c  maps.c  options.c  plugins.c  process.c  report.c  solib.c  ssol.c  syscall-arm.c  syscall-i386.c  target_mem.c  trace.c  util.c
src/modules/: Makefile.am  README.plugins  TODO.plugins  audit.c  file.c  gobject.c  memory.c  memtransfer.c  shmposix.c  shmsysv.c  thread-resource.c
sysdeps/arm/: arch.h  function.c  regs.c  syscall.c
sysdeps/i386/: arch.h  breakpoint.c  function.c  plt.c  regs.c  syscall.c
tests/: Makefile  Makefile.am  callchain.c  clone.c  fork.c  gthreads.c  libcallchain.c  malloc_recursive.c  malloc_simple.c
testsuite/: Makefile.am  README  TODO  fork.c  malloc_recursive.c  malloc_simple.c
testsuite/functracer.audit/: audit.c  audit.exp  symbols
testsuite/functracer.file/: Makefile.am  creat.c  creat.exp  dup.c  dup.exp  dup2.c  dup2.exp  fcntl.c  fcntl.exp  fdopen.c  fdopen.exp  fopen.c  fopen.exp  freopen.c  freopen.exp  inotify_init.c  inotify_init.exp  open.c  open.exp  open64.c  open64.exp  pipe.c  pipe.exp  pipe2.c  pipe2.exp  socket.c  socket.exp
testsuite/functracer.gobject/: Makefile.am  gobject.c  gobject.exp
testsuite/functracer.main/: Makefile.am  callchain.c  callchain.cpp  callchain.exp  callchain_cpp.exp  clone.c  clone.exp  context.c  context.exp  fork.c  fork.exp  gthreads.c  gthreads.exp  libcallchain.c  libcallchain.cpp  libcallchain_cpp.h
testsuite/functracer.memory/: Makefile.am  calloc.c  calloc.exp  malloc_recursive.c  malloc_recursive.exp  malloc_simple.c  malloc_simple.exp  memalign.c  memalign.exp  posix_memalign.c  posix_memalign.exp  realloc.c  realloc.exp  valloc.c  valloc.exp
testsuite/functracer.memtransfer/: memtransfer.c  memtransfer.exp
testsuite/functracer.shmposix/: Makefile.am  mmap.c  mmap.exp  mmap64.c  mmap64.exp  shm_open.c  shm_open.exp
testsuite/functracer.shmsysv/: Makefile.am  shmsysv.c  shmsysv.exp
testsuite/functracer.test1/: Makefile.am  malloc_recursive.exp  malloc_simple.c
testsuite/functracer.test2/: Makefile.am  clone.exp  fork.c  fork.exp  gthreads.c  gthreads.exp
testsuite/functracer.test3/: Makefile.am  callchain.exp  libcallchain.c
testsuite/functracer.thread/: Makefile.am  thread.c  thread.exp  thread_detached.c  thread_detached.exp
testsuite/lib/: functracer.exp
utests/: Makefile.am  utest.c  utest_options.c  utest_options.h  utest_report.c  utest_report.h
