pkglib_LTLIBRARIES = memory.la file.la
memory_la_SOURCES = memory.c
memory_la_LDFLAGS = -no-undefined -module -avoid-version
file_la_SOURCES = file.c
file_la_LDFLAGS = -no-undefined -module -avoid-version

pkglib_LTLIBRARIES += gobject.la
gobject_la_SOURCES = gobject.c
gobject_la_LDFLAGS = -no-undefined -module -avoid-version

pkglib_LTLIBRARIES += memtransfer.la
memtransfer_la_SOURCES = memtransfer.c
memtransfer_la_LDFLAGS = -no-undefined -module -avoid-version

pkglib_LTLIBRARIES += thread-resource.la
thread_resource_la_SOURCES = thread-resource.c
thread_resource_la_LDFLAGS = -no-undefined -module -avoid-version -lpthread

pkglib_LTLIBRARIES += shmsysv.la
shmsysv_la_SOURCES = shmsysv.c
shmsysv_la_LDFLAGS = -no-undefined -module -avoid-version
